--- a/key detection/index-START.html
+++ b/key detection/index-START.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Key Detection</title>
   <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 </head>
+
 <body>
-<script>
-</script>
+  <h1>Check the console</h1>
+  <script src="detect.js"></script>
 </body>
+
 </html>
